Fix: mark z-index to 2, URL size to 120px

--- a/style.css
+++ b/style.css
@@ -379,7 +379,7 @@ body::after {
     }
 
     .controls-center {
-        z-index: 9998 !important;
+        z-index: 2 !important;
     }
 
     .url-image-mobile {
@@ -387,7 +387,7 @@ body::after {
         position: fixed !important;
         left: 20px !important;
         bottom: 100px !important;
-        width: 30px !important;
+        width: 120px !important;
         height: auto !important;
         z-index: 100 !important;
     }
